--- a/style.css
+++ b/style.css
@@ -741,8 +741,7 @@ th {
 .footer {
   background-color: #f5f5f5;
   padding: 40px 0;
- /* color: #020E54;
-  color: #333;*/
+  color: #020E54;
 }
 
 .footer-content {
